<resources>
  <string name="app_name">Loan Calculator</string>

  <string name="text_name">Name</string>
  <string name="text_loan_amount">Loan Amount</string>
  <string name="text_loan_tenor">Loan Tenor</string>
  <string name="text_loan_interest">Loan Interest</string>
  <string name="text_tenor">Tenor</string>
  <string name="text_interest_rate">Interest Rate</string>
  <string name="text_year">years</string>
  <string name="text_year_short">yrs</string>
  <string name="text_adjust_rate_mortgage">Adjustable Rate Mortgage</string>
  <string name="text_until_tenor_ends">until loan tenor ends</string>
  <string name="text_monthly_repayment">Monthly Repayment</string>
  <string name="text_total_cost">Total Cost</string>

  <string name="text_fmt_account_detail">Amount ฿%1$s, %2$s year</string>
  <string name="text_fmt_tier">Tier %1$d</string>
  <string name="text_fmt_interest_rate">Interest rate of %1$.2f%%</string>
  <string name="text_fmt_year">for %1$d years</string>

  <string name="button_add">Add</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_remove">Remove</string>
  <string name="button_clear">Clear</string>
  <string name="button_edit">Edit</string>
  <string name="button_switch_to_single">Switch to Single Rate</string>
  <string name="button_switch_to_mortgage">Switch to Adjustable Rate Mortgage</string>
  <string name="button_create">Create</string>

  <string name="alert_clear_adjust_rate_mortgage">Clear all Adjustable Rate Mortgage data?</string>
</resources>
