<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:context=".account.create.CreateAccountActivity">

  <!-- Tier order -->
  <TextView
    android:id="@+id/dialogAddTierRate_textTierOrder"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:text="Tier 1"
    android:textColor="@color/textColorPrimary"
    android:textStyle="bold"
    android:textSize="20sp"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />


  <!-- Rate -->
  <EditText
    android:id="@+id/dialogAddTierRate_inputRate"
    style="@style/EditTextStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:paddingStart="16dp"
    android:paddingEnd="48dp"
    android:ems="10"
    android:hint="@string/text_interest_rate"
    android:imeOptions="actionNext"
    android:inputType="numberDecimal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dialogAddTierRate_textTierOrder"
    />
  <TextView
    style="@style/TextHolderStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="%"
    android:layout_marginEnd="16dp"
    app:layout_constraintBottom_toBottomOf="@+id/dialogAddTierRate_inputRate"
    app:layout_constraintEnd_toEndOf="@+id/dialogAddTierRate_inputRate"
    app:layout_constraintTop_toTopOf="@+id/dialogAddTierRate_inputRate"
    />


  <!-- Tenor -->
  <EditText
    android:id="@+id/dialogAddTierRate_inputTime"
    style="@style/EditTextStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:paddingStart="16dp"
    android:paddingEnd="64dp"
    android:ems="10"
    android:hint="@string/text_tenor"
    android:imeOptions="actionDone"
    android:inputType="number"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dialogAddTierRate_inputRate"
    />
  <TextView
    style="@style/TextHolderStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_year"
    android:layout_marginEnd="16dp"
    app:layout_constraintBottom_toBottomOf="@+id/dialogAddTierRate_inputTime"
    app:layout_constraintEnd_toEndOf="@+id/dialogAddTierRate_inputTime"
    app:layout_constraintTop_toTopOf="@+id/dialogAddTierRate_inputTime"
    />

</android.support.constraint.ConstraintLayout>
